--- a/index.html
+++ b/index.html
@@ -4,15 +4,51 @@
     <title>Welcome | Imad Khan's site</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Imad_Khan" />
-    <meta name="keywords" content="Android developer, programmer, software-engineer, Kotlin-dev" />
-    <meta name="description" content="My Personal Website." />
-    <meta name="url" content="https://1madk.github.io/site" />
-    <link rel="stylesheet" href="./src/css/main.css" />
-    <link rel="shortcut icon" type="image/png" href="./assets/img/favicon.ico" />
-    </head>
-    <body>
-      <div id="container">
-        <h1>Hello! <br / >I'm Imad Khan</h1>
-      </div>
-    </body>
+      <meta name="author"/>
+      <meta name="keywords" content="node.js, javascript, typescript, CSS" />
+      <meta name="description" content="My Personal Website." />
+      <meta name="url" content="https://1madk.github.io" />
+      <link rel="stylesheet" href="assets/css/main.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+      </head>
+      <body>
+        <div id="container">
+          <header>
+            <nav id="headerNav">
+              <ul id="list">
+                <li><a href="https://bit.ly/3qUu9ny">Resume</a></li>
+              </ul>
+            </nav>
+          </header>
+          <section id="firstSec">
+            <h1 id="mainHeading">Hello, I'm <span id="imad">iMad</span></h1>
+            <p id="mainText">Backend developer based in Swat, Pakistan, studying software engineering at the University of Swat, having 8+ months of experience in backend development, proficient in modern javascript-based technologies like node.js, typescript. I'm focusing on code quality always trying to write clean and good code, also following software engineering best practices, and principles.<br /><br /> Skilled in testing, debugging, and designing web services and love to solve complex problems in optimal and minimal ways. Moreover, I also like to explore new techs, methodologies, etc. Also, I love Minimalism and FOSS :) </p><br />
+          </section>
+          <section id="secSection">
+            <p id="reads">I would recommend some reads for every you:</p>
+            <ul id="readingList">
+              <li><a href="https://bit.ly/3u0DV9M">Thinking, Fast & Slow by Daniel Kahneman</a></li>
+              <li><a href="https://bit.ly/3J7NxEc">Soft Skills: The Software Developer's Life Manual by John Z. Sonmez</a></li>
+              <li><a href="https://bit.ly/3qR8TiL">The Linux Command Line by William E. Shotts Jr.</a></li>
+              <li><a href="https://bit.ly/3K0EyG4">Design Patterns: Elements of Reusable Object-Oriented Software by Erich Gamma</a></li>
+              <li><a href="https://bit.ly/3iZ9hHI">Clean Code by Rober C Martin</a></li>
+              <li><a href="https://bit.ly/3qS2ELu">The Tcp/IP Guide by W. Richard Stevens</a></li>
+              <li><a href="https://bit.ly/35x8QB7">Effective Typescript by Dan Vanderkam</a></li>
+            </ul>
+          </section>
+
+          <footer>
+            <nav>
+              <ul id="footerList">
+                <li><a href="https://github.com/1madk">GitHub</a></li>
+                <li><a href="mailto:1madk9700@gmail.com">Email</a></li>
+                <li><a href="https://bit.ly/3tZ4IDi">LinkedIn</a></li>
+              </ul>
+            </nav>
+            <p>&copy; 2022</p>
+          </footer>
+        </div>
+      </body>
+    </html>
