--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
 
       <section>
-        <h1 id="mainHeading">Hello, I'm <span id="imad">iMad</span></h1>
+        <h1 id="heading">Hello, I'm <span id="imad">iMad</span></h1>
         <p id="main-para">Backend developer based in Swat, Pakistan, studying software engineering at the University of Swat, having 8+ months of experience in backend development, proficient in modern javascript-based technologies like node.js, express, and Typescript. I'm focusing on code quality always, also following software engineering best practices, and principles.<br /><br /> Skilled in testing, debugging, and designing web services and love to solve complex problems in optimal and minimal ways. Moreover, I also like to explore new techs, methodologies, etc. Also, I love Minimalism and FOSS :) </p><br />
         <p id="reads">I would recommend some reads to you:</p>
         <ul id="stack">
