--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <meta name="description" content="My Personal Website." />
     <meta name="url" content="https://1madk.github.io" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,100;1,300;1,400&display=swap" rel="stylesheet" />
   </head>
   <body>
 
@@ -26,7 +23,7 @@
 
       <section>
         <h1 id="heading">Hello, I'm <span id="imad">iMad</span></h1>
-        <p id="main-para">Backend developer based in Swat, Pakistan, studying software engineering at the University of Swat, having 8+ months of experience in backend development, proficient in modern javascript-based technologies like node.js, express, and Typescript. I'm focusing on code quality always, also following software engineering best practices, and principles.<br /><br /> Skilled in testing, debugging, and designing web services and love to solve complex problems in optimal and minimal ways. Moreover, I also like to explore new techs, methodologies, etc. Also, I love Minimalism and FOSS :) </p><br />
+        <p id="main-para">A Backend developer based in Swat, Pakistan, studying BS software engineering at the University of Swat, switched from android to web backend having 1+ year of experience in backend development, proficient in modern JavaScript-based technologies like node.js, express, and TypeScript. Currently I'm learning and improving my skills as a backend developer. <br /><br /></p><br />
         <p id="reads">I would recommend some reads to you:</p>
         <ul id="stack">
           <li><a href="https://bit.ly/3u0DV9M">Thinking, Fast & Slow by Daniel Kahneman</a></li>
@@ -49,7 +46,6 @@
         </nav>
         <p>&copy; 2022.</p>
       </footer>
-
     </div>
   </body>
 </html>
