--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome | Imad Khan's site</title>
+    <title>iMad Khan</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author"/>
     <meta name="keywords" content="node.js, javascript, typescript, CSS" />
     <meta name="description" content="My Personal Website." />
     <meta name="url" content="https://1madk.github.io" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" href="assets/imgs/favicon.png" />
+      <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
 
@@ -23,7 +24,7 @@
 
       <section>
         <h1 id="heading">Hello, I'm <span id="imad">iMad</span></h1>
-        <p id="main-para">A Backend developer based in Swat, Pakistan, studying BS software engineering at the University of Swat, switched from android to web backend having 1+ year of experience in backend development, proficient in modern JavaScript-based technologies like node.js, express, and TypeScript. Currently I'm learning and improving my skills as a backend developer. <br /><br /></p><br />
+        <p id="main-para">A Backend developer based in Swat, Pakistan, studying BS software engineering at the University of Swat, switched from android to web backend having 1+ year of experience in backend development, proficient in modern JavaScript-based technologies like TypeScript node.js, vue.js. Currently I'm learning and improving my skills as a backend developer. <br /><br /></p><br />
         <p id="reads">I would recommend some reads to you:</p>
         <ul id="stack">
           <li><a href="https://bit.ly/3u0DV9M">Thinking, Fast & Slow by Daniel Kahneman</a></li>
