remove that bullshit short links

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>iMad Khan</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author"/>
+    <meta name="author" content="Imad Khan"/>
     <meta name="keywords" content="node.js, javascript, typescript, CSS" />
     <meta name="description" content="My Personal Website." />
     <meta name="url" content="https://1madk.github.io" />
     <link rel="icon" href="assets/imgs/favicon.png" />
-      <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
 
@@ -27,13 +27,13 @@
         <p id="main-para">A Backend developer based in Swat, Pakistan, studying BS software engineering at the University of Swat, switched from android to web backend having 1+ year of experience in backend development, proficient in modern JavaScript-based technologies like TypeScript node.js, vue.js. Currently I'm learning and improving my skills as a backend developer. <br /><br /></p><br />
         <p id="reads">I would recommend some reads to you:</p>
         <ul id="stack">
-          <li><a href="https://bit.ly/3u0DV9M">Thinking, Fast & Slow by Daniel Kahneman</a></li>
-          <li><a href="https://bit.ly/3J7NxEc">Soft Skills: The Software Developer's Life Manual by John Z. Sonmez</a></li>
-          <li><a href="https://bit.ly/3qR8TiL">The Linux Command Line by William E. Shotts Jr.</a></li>
-          <li><a href="https://bit.ly/3K0EyG4">Design Patterns: Elements of Reusable Object-Oriented Software by Erich Gamma</a></li>
-          <li><a href="https://bit.ly/3iZ9hHI">Clean Code by Rober C Martin</a></li>
-          <li><a href="https://bit.ly/3qS2ELu">The Tcp/IP Guide by W. Richard Stevens</a></li>
-          <li><a href="https://bit.ly/35x8QB7">Effective Typescript by Dan Vanderkam</a></li>
+          <li><a href="https://www.goodreads.com/book/show/11468377-thinking-fast-and-slow?ac=1&from_search=true&qid=XvF9COIFfQ&rank=1">Thinking, Fast & Slow by Daniel Kahneman</a></li>
+          <li><a href="https://www.goodreads.com/book/show/23232941-soft-skills?ac=1&from_search=true&qid=t3HyaeMa9M&rank=1">Soft Skills: The Software Developer's Life Manual by John Z. Sonmez</a></li>
+          <li><a href="https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer?from_search=true&from_srp=true&qid=tbCmYwTWwg&rank=1"> The Pragmatic Programmer: From Journeyman to Master by Andy Hunt</a></li>
+          <li><a href="https://www.goodreads.com/book/show/3735293-clean-code">Clean Code by Robert C. Martin</a></li>
+          <li><a href="https://www.goodreads.com/book/show/11724436-the-linux-command-line?ac=1&from_search=true&qid=BJkp8GPd9u&rank=1">The Linux Command Line by William E. Shotts Jr.</a></li>
+          <li><a href="https://www.goodreads.com/book/show/12933654-d-is-for-digital"> D is for Digital: What a well-informed person should know about computers and communications by Brian W. Kernighan
+            </a></li>
         </ul>
       </section>
 
