--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <nav >
           <ul id="resume">
-            <li><a href="https://bit.ly/3qUu9ny">Resume</a></li>
+            <li><a target="_blank" href="https://docs.google.com/document/d/1luo7Js6icHHm7tAkXdmQElRTsXyRBUkKgWVXHlNJMXQ">Resume</a></li>
           </ul>
         </nav>
       </header>
