--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <nav >
           <ul id="resume">
-            <li><a target="_blank" href="https://docs.google.com/document/d/1luo7Js6icHHm7tAkXdmQElRTsXyRBUkKgWVXHlNJMXQ/edit?skip_itp2_check=true">Resume</a></li>
+            <li><a target="_blank" href="#">Resume</a></li>
           </ul>
         </nav>
       </header>
@@ -41,7 +41,6 @@
         <nav>
           <ul id="footer-list">
             <li><a href="https://github.com/1madk">GitHub</a></li>
-            <li><a href="mailto:1madk9700@gmail.com">Email</a></li>
             <li><a href="https://bit.ly/3tZ4IDi">LinkedIn</a></li>
           </ul>
         </nav>
