--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <section>
         <h1 id="heading">Hello, I'm <span id="imad">iMad</span></h1>
-        <p id="main-para">A Backend developer based in Swat, Pakistan, studying BS software engineering at the University of Swat, switched from android to web backend having 1+ year of experience in backend development, proficient in modern JavaScript-based technologies like TypeScript node.js, vue.js. Currently I'm learning and improving my skills as a backend developer. <br /><br /></p><br />
+        <p id="main-para">A frontend developer based in Swat, Pakistan, studying BS software engineering at the University of Swat, switched from backend to frontend having 2+ year of experience in frontend development, proficient in modern JavaScript-based technologies like TypeScript, vue.js. Currently I'm learning and improving my skills as a frontend developer. <br /><br /></p><br />
         <p id="reads">I would recommend some reads to you:</p>
         <ul id="stack">
           <li><a href="https://www.goodreads.com/book/show/11468377-thinking-fast-and-slow?ac=1&from_search=true&qid=XvF9COIFfQ&rank=1">Thinking, Fast & Slow by Daniel Kahneman</a></li>
