Designed the home page.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,207 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet" />
-    <meta name="url" content="https://1madk.github.io" />
+    <meta name="url" content="imadkat.github.io" />
     <link rel="icon" href="assets/imgs/favicon.png" />
-    <link rel="stylesheet" href="/dist/css/output.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <header id="header">
+        <div id="logo">
+          <h2>iMad</h2>
+          <p class="fullstack">Fullstack Developer</p>
+        </div>
+        <nav id="nav">
+          <div id="header_nav">
+            <ul>
+              <li><a href="#header">Home</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li>
+                <a
+                  href="https://drive.google.com/file/d/1YCZdR2uA_41MybfI9QLXugxtVWDoUdz-/view?usp=sharing"
+                  >Resume</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <main id="main_section">
+        <div id="main_content">
+          <div id="greetings">
+            <h3>Hi, am <span class="cyan">iMad</span></h3>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+          <div class="main_social_links">
+            <a href="https://linkedin.com/in/imad-k"
+              ><img src="./assets/imgs/icons8-linkedin-50.png" alt="Linkedin"
+            /></a>
+            <a href="https://github.com/imadkat"
+              ><img src="./assets/imgs/icons8-github-50.png" alt="Github"
+            /></a>
+            <a href="https://twitter.com/1madkhan"
+              ><img src="./assets/imgs/icons8-twitterx-50.png" alt="Twitter"
+            /></a>
+            <a href="mailto:imadk9700@gmail.com"
+              ><img src="./assets/imgs/icons8-gmail-50.png" alt="Gmail"
+            /></a>
+          </div>
+        </div>
+        <div class="my_pic">
+          <img src="./assets/imgs/my_pic.jpeg" width="200px" alt="My Picture" />
+        </div>
+      </main>
+
+      <section class="skills">
+        <h2>Skills</h2>
+        <div>
+          <p>
+            <strong>Languages:</strong> TypeScript • JavaScript • Bash • C/C++
+          </p>
+          <p>
+            <strong>Frameworks/Libs:</strong> NodeJS • NestJS • Express • React
+            • Vue • Sequelize • Mongoose
+          </p>
+          <p>
+            <strong>Databases:</strong> MongoDB • PostgreSQL • Redis • Firebase
+          </p>
+          <p>
+            <strong>Platforms:</strong> Linux • Docker • DigitalOcean • Heroku
+          </p>
+          <p>
+            <strong>Other:</strong> Jira • Git • Trello • Postman • Swagger •
+            JSDoc • OpenAPI • Chrome SDK • Shell Scripting
+          </p>
+        </div>
+      </section>
+
+      <section class="section" id="projects">
+        <h2>Projects</h2>
+        <div id="section_wrapper">
+          <div class="card">
+            <h3>MarketPlace For Content Creators</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+          <div class="card">
+            <h3>Backend Development</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+          <div class="card">
+            <h3>Database Designing</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="experience">
+        <h2>Experience</h2>
+        <div id="section_wrapper">
+          <div class="card">
+            <h3>Frontend Developement</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+          <div class="card">
+            <h3>Backend Development</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+          <div class="card">
+            <h3>Database Designing</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+              vel quia quas eius hic ipsam, doloremque labore accusamus!
+              Repellat aspernatur quas architecto alias at impedit dolorum nam
+              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
+              elit. Animi vel quia quas eius hic ipsam, doloremque labore
+              accusamus! Repellat aspernatur quas architecto alias at impedit
+              dolorum nam nulla ipsum sed! sed!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="testimonials" id="testimonials">
+        <h3>Testimonials</h3>
+        <div id="review">
+          <img
+            src="./assets/imgs/my_pic.jpeg"
+            width="70px"
+            height="70px"
+            class="client_image"
+            alt="client_image" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+            fugit iusto placeat dolore dolorum sit fuga provident cum nam.
+            Doloribus fuga molestias, odio placeat dolorum dicta. Alias deleniti
+            fuga fugit.
+          </p>
+          <p>-- Lorem --</p>
+        </div>
+      </section>
+      <footer>
+        <div class="links">
+          <ul>
+            <li><a href="https://github.com/imadkat">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/imad-k">LinkedIn</a></li>
+            <li><a href="https://twitter.com/@1madkhan">Twitter</a></li>
+            <li><a href="mailto:imadk9700@gmail.com">Gmail</a></li>
+          </ul>
+        </div>
+        <div class="copyright">
+          <p>&copy; 2023</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
