--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="container">
+      <!-- Header Starts Here -->
       <header id="header">
         <div id="logo">
           <h2>iMad</h2>
@@ -33,7 +34,8 @@
               <li><a href="#testimonials">Testimonials</a></li>
               <li>
                 <a
-                  href="https://drive.google.com/file/d/1YCZdR2uA_41MybfI9QLXugxtVWDoUdz-/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1jJg_aJbgCVvB755uFE9PNDOU1QBfVMg9/view?usp=sharing"
+                  target="_blank"
                   >Resume</a
                 >
               </li>
@@ -41,6 +43,8 @@
           </div>
         </nav>
       </header>
+
+      <!-- Hero Section Starts Here-->
       <main id="main_section">
         <div id="main_content">
           <div id="greetings">
@@ -48,13 +52,14 @@
           </div>
           <div>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
+              I'm a fullstack developer inclined towards backend development
+              using JavaScript based technologies like NodeJs, NestJs, Express
+              etc. I love designing robust backend systems that adheres to
+              software engineering best practices and principles. In my spare
+              time I contribute to linux open source community. I work in the
+              following technologies but not limited only to these technologies.
+              I'm relentlessly exploring and improving my skills as a software
+              engineer.
             </p>
           </div>
           <div class="main_social_links">
@@ -77,6 +82,7 @@
         </div>
       </main>
 
+      <!-- Skills Start Here -->
       <section class="skills">
         <h2>Skills</h2>
         <div>
@@ -100,107 +106,141 @@
         </div>
       </section>
 
+      <!-- Projects Start Here -->
       <section class="section" id="projects">
         <h2>Projects</h2>
         <div id="section_wrapper">
           <div class="card">
-            <h3>MarketPlace For Content Creators</h3>
+            <h3>synChronizer (WIP)</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
+              synChronizer is a web-based application that simplifies the
+              process of synchronizing PDF highlights across multiple devices.
+              With synChronizer, you can effortlessly highlight and annotate
+              your PDF documents on one device, and the changes will
+              automatically sync to all your other devices.
+            </p>
+            <p>
+              <strong>Stack:</strong> TypeScript • NestJS • Vue.js • Git •
+              Postman
             </p>
           </div>
           <div class="card">
-            <h3>Backend Development</h3>
+            <h3>iJBoard (WIP)</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
+              Our platform redefines the job search experience by offering a
+              user-friendly interface, empowering employers to post job openings
+              effortlessly, and enabling job seekers to apply with ease. We
+              prioritize affordability, with minimal charges, ensuring
+              accessibility for both businesses and candidates.
+            </p>
+            <p>
+              <strong>Stack:</strong> JavaScript • Firebase • React • Git •
+              Stripe
             </p>
           </div>
           <div class="card">
-            <h3>Database Designing</h3>
+            <h3>Geelicious</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
+              Geelicious is a food truck website designed to transform the way
+              customers engage with mobile dining experiences. This dynamic
+              platform offers an array of innovative features, including a
+              user-friendly interface, seamless online ordering, secure payment
+              processing, and a convenient reservation system.
+            </p>
+            <p>
+              <strong>Stack:</strong> JavaScript • Firebase • React • Git •
+              Stripe
             </p>
           </div>
         </div>
       </section>
 
+      <!-- Experience Start Here -->
       <section class="section" id="experience">
         <h2>Experience</h2>
         <div id="section_wrapper">
           <div class="card">
-            <h3>Frontend Developement</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
-            </p>
+            <h3>ApnaDevs (PVT) LTD - Backend Developer</h3>
+            <span>Sep 2022 - July 2023 | Remote</span>
+            <ul>
+              <li>
+                Developed reusable payment and image processing libraries,
+                boosting team efficiency by 20%.
+              </li>
+              <li>
+                Designed and implemented Low-Latency REST APIs for a seamless
+                user experience.
+              </li>
+              <li>
+                Improved legacy system performance by 30% through advanced
+                caching techniques.
+              </li>
+              <li>
+                Managed a team of 4 developers, ensuring project milestones and
+                enhancing collaboration.
+              </li>
+              <li>
+                Actively contributed to agile practices: daily stand-ups, code
+                reviews, and scrum planning.
+              </li>
+            </ul>
           </div>
+
           <div class="card">
-            <h3>Backend Development</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
-            </p>
-          </div>
-          <div class="card">
-            <h3>Database Designing</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
-              vel quia quas eius hic ipsam, doloremque labore accusamus!
-              Repellat aspernatur quas architecto alias at impedit dolorum nam
-              nulla ipsum Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Animi vel quia quas eius hic ipsam, doloremque labore
-              accusamus! Repellat aspernatur quas architecto alias at impedit
-              dolorum nam nulla ipsum sed! sed!
-            </p>
+            <h3>Upwork - Fullstack Developer</h3>
+            <span>Dec 2021 - Present | Freelance</span>
+            <ul>
+              <li>
+                Developed various web applications, including e-commerce and
+                content management systems.
+              </li>
+              <li>
+                Collaborated closely with clients to understand their needs and
+                translated them into effective technical solutions.
+              </li>
+              <li>
+                Navigated projects of different complexities, demonstrating
+                adaptability and versatility.
+              </li>
+              <li>
+                Cultivated strong client relationships by providing regular
+                updates and actively integrating client feedback.
+              </li>
+              <li>
+                Consistently met project deadlines while maintaining
+                high-quality deliverables.
+              </li>
+            </ul>
           </div>
         </div>
       </section>
+
+      <!-- Testimonials Start Here -->
       <section class="testimonials" id="testimonials">
         <h3>Testimonials</h3>
         <div id="review">
-          <img
-            src="./assets/imgs/my_pic.jpeg"
-            width="70px"
-            height="70px"
-            class="client_image"
-            alt="client_image" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-            fugit iusto placeat dolore dolorum sit fuga provident cum nam.
-            Doloribus fuga molestias, odio placeat dolorum dicta. Alias deleniti
-            fuga fugit.
-          </p>
-          <p>-- Lorem --</p>
+          <div class="client_details">
+            <strong class="client_name"
+              >Sahil R (Project Manager at ApnaDevs)</strong
+            >
+          </div>
+          <div class="slider" id="slider">
+            <p class="testimonials_content">
+              I'm delighted to wholeheartdly recommend Imad Khan. His remarkable
+              dedication and expertise as a backend developer were evident
+              throught our collaboration. Imad consistently delivered
+              high-quality work, showing an exceptional ability to solve complex
+              technical challenges. His positive attitude, effective
+              communication, and commitment to excellence make him an invaluable
+              asset to any team. Imad's contribution have significantly enhanced
+              our projects, and I'm confident he will continue to excel in all
+              his future endeavours,
+            </p>
+          </div>
         </div>
       </section>
+
+      <!-- Footer Start Here -->
       <footer>
         <div class="links">
           <ul>
@@ -215,5 +255,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="./src/main.js"></script>
   </body>
 </html>
