add: added skills.

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
         <h2>Skills</h2>
         <div>
           <p>
-            <strong>Languages:</strong> TypeScript • JavaScript • Bash • C/C++
+            <strong>Languages:</strong> TypeScript • JavaScript • Bash • Java • C/C++
           </p>
           <p>
             <strong>Frameworks/Libs:</strong> NodeJS • NestJS • Express • React
-            • Vue • Sequelize • Mongoose
+            • Vue • Sequelize • Mongoose • Spring Boot
           </p>
           <p>
             <strong>Databases:</strong> MongoDB • PostgreSQL • Redis • Firebase
@@ -209,8 +209,7 @@
           </p>
           <p>
             <strong>Other:</strong> Jira • Git • Trello • Postman • Swagger •
-            JSDoc • OpenAPI • Chrome SDK • Shell Scripting
-          </p>
+            JSDoc • OpenAPI • Chrome SDK • Shell Scripting  </p>
         </div>
       </section>
       <!-- Testimonials Start Here -->
