--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>iMad Khan</title>
     <meta charset="utf-8" />
@@ -10,13 +11,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <meta name="url" content="imadkat.github.io" />
     <link rel="icon" href="assets/imgs/favicon.png" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
+
   <body>
     <div id="container">
       <!-- Header Starts Here -->
@@ -33,11 +33,8 @@
               <li><a href="#experience">Experience</a></li>
               <li><a href="#testimonials">Testimonials</a></li>
               <li>
-                <a
-                  href="https://drive.google.com/file/d/1jJg_aJbgCVvB755uFE9PNDOU1QBfVMg9/view?usp=sharing"
-                  target="_blank"
-                  >Resume</a
-                >
+                <a href="https://drive.google.com/file/d/1jJg_aJbgCVvB755uFE9PNDOU1QBfVMg9/view?usp=sharing"
+                  target="_blank">Resume</a>
               </li>
             </ul>
           </div>
@@ -63,18 +60,11 @@
             </p>
           </div>
           <div class="main_social_links">
-            <a href="https://linkedin.com/in/imad-k"
-              ><img src="./assets/imgs/icons8-linkedin-50.png" alt="Linkedin"
-            /></a>
-            <a href="https://github.com/imadkat"
-              ><img src="./assets/imgs/icons8-github-50.png" alt="Github"
-            /></a>
-            <a href="https://twitter.com/1madkhan"
-              ><img src="./assets/imgs/icons8-twitterx-50.png" alt="Twitter"
-            /></a>
-            <a href="mailto:imadk9700@gmail.com"
-              ><img src="./assets/imgs/icons8-gmail-50.png" alt="Gmail"
-            /></a>
+            <a href="https://linkedin.com/in/imad-k"><img src="./assets/imgs/icons8-linkedin-50.png"
+                alt="Linkedin" /></a>
+            <a href="https://github.com/imadkat"><img src="./assets/imgs/icons8-github-50.png" alt="Github" /></a>
+            <a href="https://twitter.com/1madkhan"><img src="./assets/imgs/icons8-twitterx-50.png" alt="Twitter" /></a>
+            <a href="mailto:imadk9700@gmail.com"><img src="./assets/imgs/icons8-gmail-50.png" alt="Gmail" /></a>
           </div>
         </div>
         <div class="my_pic">
@@ -85,7 +75,7 @@
       <!-- Projects Start Here -->
       <section class="section" id="projects">
         <h2>Projects</h2>
-        <div id="section_wrapper">
+        <div class="section_wrapper">
           <div class="card">
             <h3>synChronizer (WIP)</h3>
             <p>
@@ -132,9 +122,26 @@
       </section>
 
       <!-- Experience Start Here -->
-      <section class="section" id="experience">
+      <section class="section" >
         <h2>Experience</h2>
-        <div id="section_wrapper">
+        <div class="section_wrapper" id="experience">
+
+          <div class="card">
+            <h3>AlphaSquad (LLC) - Backend Developer </h3>
+            <span>Feb 2024 - Present | Islamabad </span>
+            <ul>
+             <li>Working as backend developer on TailwindCSS (UIKIT), refactored the code and obtained 20% optimized code </li>
+              <li> Reduced the response time of large, complex APIs by 60% using multi-threading & clusttering, resulting a smooth user
+              experience. </li>
+              <li>Implemented maintainable, low-latency, and scalable RestFul APIs using REST APIs best practices.</li>
+              <li> Collaborated with the frontend team and integrated backend APIs into the frontend, which reduced the overall
+              development time by 20% </li>
+              <li>
+                Mentored interns to maximize their potential, leading to successful transitions into permanent full-time positions.
+              </li>
+            </ul>
+          </div>
+
           <div class="card">
             <h3>ApnaDevs (PVT) LTD - Backend Developer</h3>
             <span>Sep 2022 - July 2023 | Remote</span>
@@ -209,16 +216,15 @@
           </p>
           <p>
             <strong>Other:</strong> Jira • Git • Trello • Postman • Swagger •
-            JSDoc • OpenAPI • Chrome SDK • Shell Scripting  </p>
+            JSDoc • OpenAPI • Chrome SDK • Shell Scripting
+          </p>
         </div>
       </section>
       <!-- Testimonials Start Here -->
       <section class="testimonials" id="testimonials">
         <h3>Testimonials</h3>
         <div id="review">
-          <strong class="client_name"
-            >Sahil R (Project Manager at ApnaDevs)</strong
-          >
+          <strong class="client_name">Sahil R (Project Manager at ApnaDevs)</strong>
           <div class="slider" id="slider">
             <p class="testimonials_content">
               I'm delighted to wholeheartdly recommend Imad Khan. His remarkable
@@ -253,4 +259,5 @@
 
     <script src="./src/main.js"></script>
   </body>
+
 </html>
