--- a/index.html
+++ b/index.html
@@ -1,263 +1,85 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <title>iMad Khan</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Imad Khan" />
-    <meta name="keywords" content="node.js, javascript, typescript, CSS" />
-    <meta name="description" content="My Personal Website." />
+    <title>Imad K | Software Engineer</title>
+    <meta name="description" content="Imad K - Software Engineer Portfolio" />
+    <meta name="author" content="Imad K" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <meta name="url" content="imadkat.github.io" />
-    <link rel="icon" href="assets/imgs/favicon.png" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta property="og:title" content="Imad K | Software Engineer" />
+    <meta property="og:description" content="Imad K - Software Engineer Portfolio" />
+    <meta property="og:type" content="website" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
   <body>
-    <div id="container">
-      <!-- Header Starts Here -->
-      <header id="header">
-        <div id="logo">
-          <h2>iMad</h2>
-          <p class="fullstack">Fullstack Developer</p>
-        </div>
-        <nav id="nav">
-          <div id="header_nav">
-            <ul>
-              <li><a href="#header">Home</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#experience">Experience</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-              <li>
-                <a href="https://drive.google.com/file/d/1jJg_aJbgCVvB755uFE9PNDOU1QBfVMg9/view?usp=sharing"
-                  target="_blank">Resume</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+    <div class="container">
+      <header>
+        <h1><a target="_blank" href="https://drive.google.com/file/d/1EeehYkhn6U8OLCx0kdkE8no7MRqezCa2/view?usp=sharing">Imad K</a></h1>
+        <p class="subtitle">Software Engineer</p>
       </header>
 
-      <!-- Hero Section Starts Here-->
-      <main id="main_section">
-        <div id="main_content">
-          <div id="greetings">
-            <h3>Hi, am <span class="cyan">iMad</span></h3>
-          </div>
-          <div>
+
+      <main>
+        <section id="about" class="card">
+          <h2>About Me</h2>
+          <div class="section-content">
             <p>
-              I'm a fullstack developer inclined towards backend development
-              using JavaScript based technologies like NodeJs, NestJs, Express
-              etc. I love designing robust backend systems that adheres to
-              software engineering best practices and principles. In my spare
-              time I contribute to linux open source community. I work in the
-              following technologies but not limited only to these technologies.
-              I'm relentlessly exploring and improving my skills as a software
-              engineer.
+              I'm a Software Engineer who has passion for solving backend problems with the best possible solutions. I have over 3 years of experience in designing, implementation and shippment of software systems. Wanna know more about me? let's hop on call to dicsuss my expertise and how I would be a best fit for your team or project
             </p>
           </div>
-          <div class="main_social_links">
-            <a href="https://linkedin.com/in/imad-k"><img src="./assets/imgs/icons8-linkedin-50.png"
-                alt="Linkedin" /></a>
-            <a href="https://github.com/imadkat"><img src="./assets/imgs/icons8-github-50.png" alt="Github" /></a>
-            <a href="https://twitter.com/1madkhan"><img src="./assets/imgs/icons8-twitterx-50.png" alt="Twitter" /></a>
-            <a href="mailto:imadk9700@gmail.com"><img src="./assets/imgs/icons8-gmail-50.png" alt="Gmail" /></a>
+        </section>
+
+
+        <section id="projects" class="card">
+          <h2>Projects</h2>
+          <div class="projects-grid">
+            <div class="project">
+              <h3><a target="_blank" href="https://jobjelly.io">AI-Powered Resume Generator and Optimizor</a></h3>
+              <p>Created resume generator and job tracker for job seekers in team setting</p>
+              <div class="project-tech">AWS, Docker, TypeScript, Express, Nodejs, MongoDB</div>
+            </div>
+            <div class="project">
+              <h3><a target="_blank" href="https://www.gigbase.io">Productivity Web App For freelancers</a> </h3>
+              <p>Milestones, contracts, invoices and payment managment productivity web app for freelancers</p>
+              <div class="project-tech">AWS, TypeScript, Nestjs, MongoDB</div>
+            </div>
+            <div class="project">
+              <h3>Live Streaming Engine and SDK for developers (WIP)</h3>
+              <p>Working on live streaming and sdk through which develoeprs can create live-streaming web apps</p>
+              <div class="project-tech">AWS, Docker, Kubernetes, Go, TypeScript, PostgreSQL, Redis, RabbitMQ/Kafka</div>
+            </div>
           </div>
-        </div>
-        <div class="my_pic">
-          <img src="./assets/imgs/my_pic.jpeg" width="200px" alt="My Picture" />
-        </div>
+        </section>
+
+        <section id="contact">
+          <div class="contact-links">
+            <a target="_blank" href="https://linkedin.com/in/imad-k" target="_blank" class="contact-link">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect width="4" height="12" x="2" y="9"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+            </a>
+            <a target="_blank" href="https://ik4y.github.io" target="_blank" class="contact-link">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
+            </a>
+            <a target="_blank" href="mailto:contact@imad-k.dev" class="contact-link">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg>
+            </a>
+          </div>
+        </section>
       </main>
 
-      <!-- Projects Start Here -->
-      <section class="section" id="projects">
-        <h2>Projects</h2>
-        <div class="section_wrapper">
-          <div class="card">
-            <h3>synChronizer (WIP)</h3>
-            <p>
-              synChronizer is a web-based application that simplifies the
-              process of synchronizing PDF highlights across multiple devices.
-              With synChronizer, you can effortlessly highlight and annotate
-              your PDF documents on one device, and the changes will
-              automatically sync to all your other devices.
-            </p>
-            <p>
-              <strong>Stack:</strong> TypeScript • NestJS • Vue.js • Git •
-              Postman
-            </p>
-          </div>
-          <div class="card">
-            <h3>iJBoard (WIP)</h3>
-            <p>
-              Our platform redefines the job search experience by offering a
-              user-friendly interface, empowering employers to post job openings
-              effortlessly, and enabling job seekers to apply with ease. We
-              prioritize affordability, with minimal charges, ensuring
-              accessibility for both businesses and candidates.
-            </p>
-            <p>
-              <strong>Stack:</strong> JavaScript • Firebase • React • Git •
-              Stripe
-            </p>
-          </div>
-          <div class="card">
-            <h3>Geelicious</h3>
-            <p>
-              Geelicious is a food truck website designed to transform the way
-              customers engage with mobile dining experiences. This dynamic
-              platform offers an array of innovative features, including a
-              user-friendly interface, seamless online ordering, secure payment
-              processing, and a convenient reservation system.
-            </p>
-            <p>
-              <strong>Stack:</strong> JavaScript • Firebase • React • Git •
-              Stripe
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Experience Start Here -->
-      <section class="section" >
-        <h2>Experience</h2>
-        <div class="section_wrapper" id="experience">
-
-          <div class="card">
-            <h3>AlphaSquad (LLC) - Backend Developer </h3>
-            <span>Feb 2024 - Present | Islamabad </span>
-            <ul>
-             <li>Working as backend developer on TailwindCSS (UIKIT), refactored the code and obtained 20% optimized code </li>
-              <li> Reduced the response time of large, complex APIs by 60% using multi-threading & clusttering, resulting a smooth user
-              experience. </li>
-              <li>Implemented maintainable, low-latency, and scalable RestFul APIs using REST APIs best practices.</li>
-              <li> Collaborated with the frontend team and integrated backend APIs into the frontend, which reduced the overall
-              development time by 20% </li>
-              <li>
-                Mentored interns to maximize their potential, leading to successful transitions into permanent full-time positions.
-              </li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <h3>ApnaDevs (PVT) LTD - Backend Developer</h3>
-            <span>Sep 2022 - July 2023 | Remote</span>
-            <ul>
-              <li>
-                Developed reusable payment and image processing libraries,
-                boosting team efficiency by 20%.
-              </li>
-              <li>
-                Designed and implemented Low-Latency REST APIs for a seamless
-                user experience.
-              </li>
-              <li>
-                Improved legacy system performance by 30% through advanced
-                caching techniques.
-              </li>
-              <li>
-                Managed a team of 4 developers, ensuring project milestones and
-                enhancing collaboration.
-              </li>
-              <li>
-                Actively contributed to agile practices: daily stand-ups, code
-                reviews, and scrum planning.
-              </li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <h3>Upwork - Fullstack Developer</h3>
-            <span>Dec 2021 - Present | Freelance</span>
-            <ul>
-              <li>
-                Developed various web applications, including e-commerce and
-                content management systems.
-              </li>
-              <li>
-                Collaborated closely with clients to understand their needs and
-                translated them into effective technical solutions.
-              </li>
-              <li>
-                Navigated projects of different complexities, demonstrating
-                adaptability and versatility.
-              </li>
-              <li>
-                Cultivated strong client relationships by providing regular
-                updates and actively integrating client feedback.
-              </li>
-              <li>
-                Consistently met project deadlines while maintaining
-                high-quality deliverables.
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <!-- Skills Start Here -->
-      <section class="skills">
-        <h2>Skills</h2>
-        <div>
-          <p>
-            <strong>Languages:</strong> TypeScript • JavaScript • Bash • Java • C/C++
-          </p>
-          <p>
-            <strong>Frameworks/Libs:</strong> NodeJS • NestJS • Express • React
-            • Vue • Sequelize • Mongoose • Spring Boot
-          </p>
-          <p>
-            <strong>Databases:</strong> MongoDB • PostgreSQL • Redis • Firebase
-          </p>
-          <p>
-            <strong>Platforms:</strong> Linux • Docker • DigitalOcean • Heroku
-          </p>
-          <p>
-            <strong>Other:</strong> Jira • Git • Trello • Postman • Swagger •
-            JSDoc • OpenAPI • Chrome SDK • Shell Scripting
-          </p>
-        </div>
-      </section>
-      <!-- Testimonials Start Here -->
-      <section class="testimonials" id="testimonials">
-        <h3>Testimonials</h3>
-        <div id="review">
-          <strong class="client_name">Sahil R (Project Manager at ApnaDevs)</strong>
-          <div class="slider" id="slider">
-            <p class="testimonials_content">
-              I'm delighted to wholeheartdly recommend Imad Khan. His remarkable
-              dedication and expertise as a backend developer were evident
-              throught our collaboration. Imad consistently delivered
-              high-quality work, showing an exceptional ability to solve complex
-              technical challenges. His positive attitude, effective
-              communication, and commitment to excellence make him an invaluable
-              asset to any team. Imad's contribution have significantly enhanced
-              our projects, and I'm confident he will continue to excel in all
-              his future endeavours,
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Footer Start Here -->
       <footer>
-        <div class="links">
-          <ul>
-            <li><a href="https://github.com/imadkat">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/imad-k">LinkedIn</a></li>
-            <li><a href="https://twitter.com/@1madkhan">Twitter</a></li>
-            <li><a href="mailto:imadk9700@gmail.com">Gmail</a></li>
-          </ul>
-        </div>
-        <div class="copyright">
-          <p>&copy; 2023</p>
-        </div>
+        <p id="copyright"></p>
       </footer>
     </div>
 
-    <script src="./src/main.js"></script>
+    <script >
+    document.getElementById('copyright').innerHTML = `&copy; ${new Date().getFullYear()} - Imad K`
+    </script>
   </body>
-
 </html>
+
