fix: fixed design inconsistencies

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <section id="experience" class="section">
       <div class="container">
         <div class="section-header">
-          <span class="number font-mono">03.</span>
+          <span class="number font-mono">02.</span>
           <h2 class="font-heading">Work Experience</h2>
           <div class="line"></div>
         </div>
@@ -345,7 +345,7 @@
     <section id="techstack" class="section section-alt">
       <div class="container">
         <div class="section-header">
-          <span class="number font-mono">04.</span>
+          <span class="number font-mono">03.</span>
           <h2 class="font-heading">Tech Stack</h2>
           <div class="line"></div>
         </div>
@@ -375,7 +375,7 @@
               <li>
                 <span
                   class="dot"
-                  style="background: var(--gruvbox-blue)"></span>
+                  style="background: var(--gruvbox-green)"></span>
                 Bash
               </li>
             </ul>
@@ -387,13 +387,11 @@
               <li>
                 <span
                   class="dot"
-                  style="background: var(--gruvbox-blue)"></span>
+                  style="background: var(--gruvbox-green)"></span>
                 Node.js
               </li>
               <li>
-                <span
-                  class="dot"
-                  style="background: var(--gruvbox-orange)"></span>
+                <span class="dot" style="background: var(--gruvbox-red)"></span>
                 NestJS
               </li>
               <li>
@@ -405,7 +403,7 @@
               <li>
                 <span
                   class="dot"
-                  style="background: var(--gruvbox-blue)"></span>
+                  style="background: var(--muted-foreground)"></span>
                 Next.js
               </li>
               <li>
@@ -427,7 +425,9 @@
                 PostgreSQL
               </li>
               <li>
-                <span class="dot" style="background: var(--gruvbox-red)"></span>
+                <span
+                  class="dot"
+                  style="background: var(--gruvbox-orange)"></span>
                 Redis
               </li>
               <li>
@@ -515,14 +515,8 @@
               <li>
                 <span
                   class="dot"
-                  style="background: var(--gruvbox-orange)"></span>
+                  style="background: var(--gruvbox-blue)"></span>
                 Prisma/TypeORM
-              </li>
-              <li>
-                <span
-                  class="dot"
-                  style="background: var(--gruvbox-orange)"></span>
-                Elasticsearch
               </li>
               <li>
                 <span
@@ -533,7 +527,7 @@
               <li>
                 <span
                   class="dot"
-                  style="background: var(--gruvbox-orange)"></span>
+                  style="background: var(--gruvbox-green)"></span>
                 OpenAPI
               </li>
             </ul>
@@ -574,7 +568,7 @@
     <section id="testimonials" class="section">
       <div class="container">
         <div class="section-header">
-          <span class="number font-mono">05.</span>
+          <span class="number font-mono">04.</span>
           <h2 class="font-heading">Testimonials</h2>
           <div class="line"></div>
         </div>
@@ -605,7 +599,7 @@
       <div class="container">
         <div class="section-header">
           <div class="line"></div>
-          <span class="number font-mono">07.</span>
+          <span class="number font-mono">05.</span>
           <h2 class="font-heading">Get In Touch</h2>
           <div class="line"></div>
         </div>
